wip: refactor endpoints
